# hermes-weclawbot-channel

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
hermes_weclawbot_channel/: __init__.py  adapter.py
src/: __init__.py  adapter.py
tests/: conftest.py  test_adapter_reply_routing.py  test_listener_dispatch.py
