[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-weclawbot-channel"
version = "0.2.0"
description = "WeClawBot-Bridge WebSocket channel adapter for Hermes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "websockets==15.0.1",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[tool.setuptools]
packages = ["hermes_weclawbot_channel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
